<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BoxSyncTest</string>
    <string name="action_settings">Settings</string>
    <string name="new_community_button">Create Community</string>
    <string name="list_communities_button">List Communities</string>
    <string name="list_people_button">List People</string>
    <string name="add_person_button">Add Person</string>
    <string name="title_activity_create_community">Create Community</string>
    <string name="title_activity_edit_community">Edit Community</string>
    <string name="title_activity_add_person">Add Person</string>
    <string name="title_activity_edit_person">Edit Person</string>
    <string name="person_name_hint">Name</string>
    <string name="person_email_hint">Email</string>
    <string name="person_description_hint">Description</string>
    <string name="person_add_button">Add Person</string>
    <string name="person_save_button">Save</string>
    <string name="community_name_hint">Name</string>
    <string name="community_owner_prompt">Select Owner</string>
    <string name="community_owner_hint">Owner</string>
    <string name="community_add_button">Add Community</string>
    <string name="community_save_button">Save</string>
    <string name="community_type_hint">Type</string>
    <string name="community_description_hint">Description</string>
    <string name="community_message_hint">Enter Message</string>
    <string name="community_cancel_button">Cancel</string>
    <string name="community_show_members">Show Members</string>
    <string name="person_cancel_button">Cancel</string>
    <string name="title_activity_list_communities">Communities</string>
    <string name="community_list_back_button">Back</string>
    <string name="title_activity_list_people">People</string>
    <string name="people_list_back_button">Back</string>
    <string name="person_delete_button">Delete</string>
    <string name="community_delete_button">Delete</string>
    <string name="title_activity_show_community">Community</string>
    <string name="community_edit_button">Edit</string>
    <string name="community_back_button">Back</string>
    <string name="community_post_button">Post</string>
    <string name="placeholder">$EMPTY$</string>
    <string name="title_activity_show_members">Members</string>
    <string name="hello_world">Hello world!</string>
    <string name="member_list_back_button">Back</string>
    <string name="membership_person_prompt">Select Member</string>
    <string name="membership_add_button">Add Member</string>
    <string name="service_list_prompt">Select Service</string>
    <string name="service_share_button">Share</string>

</resources>