<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_community_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/create_community_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_create_community"
            android:textSize="10pt" />
        
        <EditText
            android:id="@+id/community_name_field"
            android:layout_height="wrap_content"
            android:hint="@string/community_name_hint"
            android:inputType="text"
            android:layout_width="fill_parent" />
        
        <EditText
            android:id="@+id/community_type_field"
            android:layout_height="wrap_content"
            android:hint="@string/community_type_hint"
            android:inputType="text"
            android:layout_width="fill_parent" />
        
        <EditText
            android:id="@+id/community_description_field"
            android:layout_height="wrap_content"
            android:hint="@string/community_description_hint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent" />
        
        <Spinner
            android:id="@+id/community_owner_list"
            android:layout_height="wrap_content"
            android:prompt="@string/community_owner_prompt"
            android:layout_width="fill_parent" />
        
        <Button
            android:id="@+id/community_add_button"
            android:layout_height="wrap_content"
            android:text="@string/community_add_button"
            android:onClick="addCommunity"
            android:layout_width="fill_parent" />
        
        <Button
            android:id="@+id/community_cancel_button"
            android:layout_height="wrap_content"
            android:text="@string/community_cancel_button"
            android:onClick="cancel"
            android:layout_width="fill_parent" />
        
	</LinearLayout>    
</ScrollView>