<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_person_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        
        <TextView
            android:id="@+id/add_person_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_add_person"
            android:textSize="10pt" />
        
        <EditText
            android:id="@+id/person_name_field"
            android:layout_height="wrap_content"
            android:hint="@string/person_name_hint"
            android:inputType="textPersonName"
            android:layout_width="fill_parent" />
        
        <EditText
            android:id="@+id/person_email_field"
            android:layout_height="wrap_content"
            android:hint="@string/person_email_hint"
            android:inputType="textEmailAddress"
            android:layout_width="fill_parent" />
        
        <EditText
            android:id="@+id/person_description_field"
            android:layout_height="wrap_content"
            android:hint="@string/person_description_hint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_width="fill_parent" />
        
        <Button
            android:id="@+id/person_add_button"
            android:layout_height="wrap_content"
            android:text="@string/person_add_button"
            android:onClick="addPerson"
            android:layout_width="fill_parent" />
        
        <Button
            android:id="@+id/person_delete_button"
            android:layout_height="wrap_content"
            android:text="@string/person_delete_button"
            android:onClick="deletePerson"
            android:layout_width="fill_parent"
            android:visibility="gone" />
        
        <Button
            android:id="@+id/person_cancel_button"
            android:layout_height="wrap_content"
            android:text="@string/person_cancel_button"
            android:onClick="cancel"
            android:layout_width="fill_parent" />
        
	</LinearLayout>    
</ScrollView>