<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <TextView
        android:id="@+id/list_members_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_show_members"
        android:textSize="10pt" />

    <Button
        android:id="@+id/member_list_back_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="back"
        android:text="@string/member_list_back_button" />
    
    <ListView
        android:id="@+id/members_list_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <View
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="@android:color/darker_gray" />
    
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <Spinner
		android:id="@+id/membership_person_list"
		android:layout_height="wrap_content"
		android:prompt="@string/membership_person_prompt"
		android:layout_width="fill_parent" />
    
    <Button
        android:id="@+id/membership_add_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addMember"
        android:text="@string/membership_add_button" />

</LinearLayout>